app/styles/main.css
/*
Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
Code distributed by Google as part of the polymer project is also
subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
*/

body {
  background: #fafafa;
  font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  color: #333;
}

table, tr, td, th {
  border-style: solid;
  border-width: 1px;
  border-color: white;
  border-collapse: collapse;
}

td {
  min-width: 80px;
}

table tr:nth-child(even) {
  background-color: #C5CAE9;
}

table tr:nth-child(odd) {
  background-color: #fff;
}

table th {
  color: white;
  background-color: #5C6BC0;
}

th {
  cursor: pointer;
}

th.sec {
  width: 16px;
  word-wrap: break-word;
  cursor: auto;
}

pre{
    white-space: pre-wrap;
    word-wrap: break-word;
}

.page-title {
  outline: none;
}

.number {
  text-align: right;
}

.date {
  text-align: center;
}

#tableview {
  overflow: auto;
}

